--- a/SWG-Intro-Materials/pebblesprovisions.html/pebblesprovisions-contact-us.html
+++ b/SWG-Intro-Materials/pebblesprovisions.html/pebblesprovisions-contact-us.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="restaurantStyles.css"
+	      rel="stylesheet"
+	      type="text/css" />
+	<style>
+		td {
+		   color: teal;
+		}
+		body {
+		   background-color: LightGoldenrodYellow;
+		}
+	</style>
 	<title>Pebbles' Provisions</title>
+	<div id="header">
 	<h1 align="center">Pebbles' Provisions</h1><hr/>
 	<table width="30%">
 		<tr>
@@ -10,7 +22,7 @@
 			<td align="center"><a href="pebblesprovisions-contact-us.html">Contact Us</a></td>
 		</tr>
 	</table><hr/>
-		
+	</div>
 </head>
 <body>
 	<div>
@@ -63,6 +75,7 @@
 	</div>
 	<div>
 	<hr/>
+	<div id="footer">
 	<table width="100%">
 		<tr>
 			<td align="center"><address>123 Kingle Cane Court, Louisville, KY, 40291</address></td>
