--- a/pebblesprovisions.html/pebblesprovisions-menu.html
+++ b/pebblesprovisions.html/pebblesprovisions-menu.html
@@ -91,6 +91,21 @@
 			<td align="center">$6.95</td>
 			<td align="center">$7.95</td>
 		</tr>
+		<tr>
+			<th colspan="3" align="center"><p>Beverages</p></th>
+		</tr>
+		<tr>
+			<td colspan="3" align="center">Root Beer - $3.00</td>
+		</tr>
+		<tr>
+			<td colspan="3" align="center">Bottled Water - $1.25</td>
+		</tr>
+		<tr>
+			<td colspan="3" align="center">Leonade - $1.00</td>
+		</tr>
+		<tr>
+			<td colspan="3" align="center">Iced Tea - $1.25</td>
+		</tr>
 	</table><hr/>
 	</div>	
 	<div id="footer">
