--- a/pebblesprovisions.html/pebblesprovisions-contact-us.html
+++ b/pebblesprovisions.html/pebblesprovisions-contact-us.html
@@ -4,6 +4,16 @@
 	<link href="restaurantStyles.css"
 	      rel="stylesheet"
 	      type="text/css" />
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
+	<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<style>
 		td {
 		   color: teal;
@@ -15,13 +25,20 @@
 	<title>Pebbles' Provisions</title>
 	<div id="header">
 	<h1 align="center">Pebbles' Provisions</h1><hr/>
-	<table width="30%">
-		<tr>
-			<td align="center"><a href="pebblesprovisions.html">Home</a></td>
-			<td align="center"><a href="pebblesprovisions-menu.html">Menu</a></td>
-			<td align="center"><a href="pebblesprovisions-contact-us.html">Contact Us</a></td>
-		</tr>
-	</table><hr/>
+	<div="jumbotron">
+	 <div class="container text-center">
+	 <h1>New location opening soon - in the Ethereal Plane!</h1>
+	 </div>
+	</div>
+	<div>
+	 <ul class="list-inline">
+	  <ul  class="nav nav-pills">
+		<li><a href="pebblesprovisions.html"><span class="glyphicon glyphicon-home"></span></a></li>
+		<li><a href="pebblesprovisions-menu.html">Menu</a></li>
+		<li><a href="pebblesprovisions-contact-us.html">Contact Us</a></li>
+	</ul>
+	</ul>
+	<hr/>
 	</div>
 </head>
 <body>
