--- a/pebblesprovisions.html/pebblesprovisions-menu.html
+++ b/pebblesprovisions.html/pebblesprovisions-menu.html
@@ -4,13 +4,20 @@
 	<link href="restaurantStyles.css"
 	      rel="stylesheet"
 	      type="text/css" />
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
+	<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<style>
-		th {
-		   color: teal;
-		   font-size: 22px;
-		}
-		td {
-		   color: teal;
+		h2 {
+		   color: ForestGreen;
+		   font-family: Permanent Marker, cursive;
 		}
 		body {
 		   background-color: LightGoldenrodYellow;
@@ -19,102 +26,105 @@
 	<title>Pebbles' Provisions</title>
 	<div id="header">
 	<h1 align="center">Pebbles' Provisions</h1><hr/>
-	<table width="30%">
-		<tr>
-			<td align="center"><a href="pebblesprovisions.html">Home</a></td>
-			<td align="center"><a href="pebblesprovisions-menu.html">Menu</a></td>
-			<td align="center"><a href="pebblesprovisions-contact-us.html">Contact Us</a></td>
-		</tr>
-	</table><hr/>
+	<div="jumbotron">
+	 <div class="container text-center">
+	 <h1>New location opening soon - in the Ethereal Plane!</h1>
+	 </div>
+	</div>
+	<div>
+	 <ul class="list-inline">
+	  <ul  class="nav nav-pills">
+		<li><a href="pebblesprovisions.html"><span class="glyphicon glyphicon-home"></span></a></li>
+		<li><a href="pebblesprovisions-menu.html">Menu</a></li>
+		<li><a href="pebblesprovisions-contact-us.html">Contact Us</a></li>
+	</ul>
+	</ul>
+	<hr/>
 	</div>
 </head>
 <body>
 	<div>
-	<table width="100%">
-		<tr>
-			<th><p>Burger and Fries</p></th>
-			<th><p>Hog Dog and Chips</p></th>
-			<th><p>Italian Sausage and Peppers</p></th>
-		</tr>
-		<tr>
-			<td align="center">An American Classic!</td>
-			<td align="center">A Summer Classic!</td>
-			<td align="center">An All-Time Favorite!!</td>
-		</tr>
-		<tr>
-			<td align="center">Your choice - with or without cheese</td>
-			<td align="center">Your choice - white or wheat bun</td>
-			<td align="center">Your choice - mild or spicy</td>
-		</tr>
-		<tr>
-			<td align="center">Pickle, onion, tomato and lettuce</td>
-			<td align="center">Relish, mustard, and ketchup</td>
-			<td align="center">Cole Slaw</td>
-		</tr>
-		<tr>
-			<td align="center">Served with our famous thick cut french fries</td>
-			<td align="center">Served with our house-made chips</td>
-			<td align="center">Served with garlic mashers</td>
-		</tr>
-		<tr>
-			<td align="center">$7.95</td>
-			<td align="center">$7.95</td>
-			<td align="center">$10.95</td>
-		</tr>
-		<tr>
-			<th><p>Tenderloin Sandwich and Chips</p></th>
-			<th><p>House Salad</p></th>
-			<th><p>Brisket Sandwich and Fries</p></th>
-		</tr>
-		<tr>
-			<td align="center">Really Hits the Spot!</td>
-			<td align="center">On the Lighter Side</td>
-			<td align="center">A taste of Texas!</td>
-		</tr>
-		<tr>
-			<td align="center">Plain or Sesame Seed Bun</td>
-			<td align="center">Your choice - with or without cheese</td>
-			<td align="center">Smoked Brisket on thick-cut Texas Toast</td>
-		</tr>
-		<tr>
-			<td align="center">Pickle, onion, tomato and lettuce</td>
-			<td align="center">Iceburg lettuce, tomatoes, peppers</td>
-			<td align="center">Cole Slaw</td>
-		</tr>
-		<tr>
-			<td align="center">Served with our house-made chips</td>
-			<td align="center">Served with a dinner roll</td>
-			<td align="center">Served with our famous thick-cut french fries</td>
-		</tr>
-		<tr>
-			<td align="center">$8.95</td>
-			<td align="center">$6.95</td>
-			<td align="center">$7.95</td>
-		</tr>
-		<tr>
-			<th colspan="3" align="center"><p>Beverages</p></th>
-		</tr>
-		<tr>
-			<td colspan="3" align="center">Root Beer - $3.00</td>
-		</tr>
-		<tr>
-			<td colspan="3" align="center">Bottled Water - $1.25</td>
-		</tr>
-		<tr>
-			<td colspan="3" align="center">Leonade - $1.00</td>
-		</tr>
-		<tr>
-			<td colspan="3" align="center">Iced Tea - $1.25</td>
-		</tr>
-	</table><hr/>
-	</div>	
-	<div id="footer">
-	<table width="100%">
-		<tr>
-			<td align="center"><address>123 Kingle Cane Court, Louisville, KY, 40291</address></td>
-		</tr>
-		<tr>
-			<td align="center"><address>502-364-2433</address></td>
+	  <div class="container">
+	   <div class="row">
+
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	      <h2>Burger and Fries</h2>
+		<p>An American Classic</p>
+		<p>Your Choice - with or without cheese</p>
+		<p>Pickle,onion, tomato and lettuce</p>
+		<p>Served with our famous thick cut french fries</p>
+		<p>$7.95</p>
+	    </div>
+
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	      <h2>Hot Dog and Chips</h2>
+		<p>A Summer Classic</p>
+		<p>Your choice - white or wheat bun</p>
+		<p>Relish, mustard, and ketchup</p>
+		<p>Served with our house-made chips</p>
+		<p>$7.95</p>
+	    </div>
+	 
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	      <h2>Italian Sausage and Peppers</h2>
+		<p>An All-Time Favorite!!</p>
+		<p>Your choice - mild or spicy</p>
+		<p>Cole Slaw</p>
+		<p>Served with garlic mashers</p>
+		<p>$10.95</p>
+	   </div>
+
+	  </div>  
+	 </div>
+	</div> 
+
+	<div>
+	  <div class="container">
+	   <div class="row">
+
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	     <h2>Tenderloin Sandwich and Chips</h2>
+		<p>Really Hits the Spot</p>
+		<p>Plain or Sesame Seed Bun</p>
+		<p>Pickle,onion, tomato and lettuce</p>
+		<p>Served with our house-made chips</p>
+		<p>$8.95</p>
+	    </div>
+
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	      <h2>House Salad</h2>
+		<p>On the Lighter Side</p>
+		<p>Your Choice - with or without cheese</p>
+		<p>Iceburg lettuce, tomatoes, peppers</p>
+		<p>Served with a dinner roll</p>
+		<p>$6.95</p>
+	    </div>
+
+	    <div class="col-xs-12 col-md-4 col-lg-4" align="center">
+	      <h2>Brisket Sandwich and Fries</h2>
+		<p>A taste of Texas!</p>
+		<p>Smoked Brisket on thick-cut Texas Toast</p>
+		<p>Cole Slaw</p>
+		<p>Served with our famous thick cut french fries</p>
+		<p>$7.95</p>
+	    </div>
+	
+	<div>
+	 <div class="container">
+	  <div class="row">
+	   <div class= "col-xs-12 col-md-12 col-lg-12" align= "center">
+	    <h2>Beverages</h2>
+		<p>Root Beer $3.00</p>
+		<p>Bottled Water $1.25</p>
+		<p>Lemonade $1.00</p>
+		<p>Iced Tea $1.25</p>
+	   </div>
+	  </div>
+	 </div>
+	</div>
+
+	   </div>
+	  </div>
 	</div>        
 </body>
 </html>
