--- a/pebblesprovisions.html/pebblesprovisions.html
+++ b/pebblesprovisions.html/pebblesprovisions.html
@@ -4,45 +4,89 @@
 	<link href="restaurantStyles.css"
 	      rel="stylesheet"
 	      type="text/css" />
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
 	<style>
-		td {
-		   color: teal;
-		}
+		
 		body {
 		   background-color: LightGoldenrodYellow;
 		}
+
 	</style>
+
 	<title>Pebbles' Provisions</title>
+
 	<div id="header">
-	<h1 align="center">Pebbles' Provisions</h1><hr/>
-	<table width="30%">
-		<tr>
-			<td align="center"><a href="pebblesprovisions.html">Home</a></td>
-			<td align="center"><a href="pebblesprovisions-menu.html">Menu</a></td>
-			<td align="center"><a href="pebblesprovisions-contact-us.html">Contact Us</a></td>
-		</tr>
-	</table><hr/>
+	 <h1 align="center">Pebbles' Provisions</h1><hr/>
+	<div="jumbotron">
+	 <div class="container text-center">
+	  <h1>New location opening soon - in the Ethereal Plane!</h1>
+	 </div>
 	</div>
+
+	<div>
+	 <ul class="list-inline">
+	  <ul  class="nav nav-pills">
+		<li><a href="pebblesprovisions.html"><span class="glyphicon glyphicon-home"></span></a></li>
+		<li><a href="pebblesprovisions-menu.html">Menu</a></li>
+		<li><a href="pebblesprovisions-contact-us.html">Contact Us</a></li>
+	</ul>
+	</ul>
+	</div>
+	<hr/>
 </head>
+
 <body>
-<div>	
+
+<div>
+ <div class="container">
+  <div class="row">
+
+   <div class="col-xs-12 col-md-12 col-lg-12" align="center">
 	<img src="https://scontent-ord1-1.xx.fbcdn.net/v/t1.0-9/16649534_10210499633100660_5435160824867025547_n.jpg?oh=18ae148dac830876ef85c43a6f57608b&oe=59343767" 
 						alt="Portrait of Chef Pebbles"
-						style="width: 400px;height: 350px; margin: auto; display: block"/>
-	<table width="100%">
-		<tr>
-			
-			<td width="22%"></td><td align="left">Innovation. Daring. Excellence. These are the three guiding principles of Chef Pebbles' philosophy of cuisine. The only dog/chef in the tri-state area, Chef Pebbles, has made a name for herself by tirelessly sniffing out the freshest ingredients from local trashcans, backyards, and sweaty gym bags and channeling her passion for fine American cuisine into the only restaurant to recieve the coveted three Mischelin Bones rating from the Mischelin Society of dogs/chefs.  Chef Pebbles' and her team's relentless, unwavering commitment to quality results in an unforgetable experience with each and every visit.  Bark us down, and book your reservation today.  Bone-appetit.</td><td width="22%">
-	</table><hr/>
+						style="width: 400px;height: 350px; margin: auto; display: block" class="img-responsive img-circle"/>
+   </div>
+
+  </div>
+ </div>
+</div>
+
+<div>
+ <div class="container">
+  <div class="row">
+
+   <div class="col-md-3 col-lg-3">
+   </div>
+   <div class="col-xs-12 col-md-6 col-lg-6" align="center">			
+	<p>Innovation. Daring. Excellence. These are the three guiding principles of Chef Pebbles' philosophy of cuisine. The only dog/chef in the tri-state area, Chef Pebbles, has made a name for herself by tirelessly sniffing out the freshest ingredients from local trashcans, backyards, and sweaty gym bags and channeling her passion for fine American cuisine into the only restaurant to recieve the coveted three Mischelin Bones rating from the Mischelin Society of dogs/chefs.  Chef Pebbles' and her team's relentless, unwavering commitment to quality results in an unforgetable experience with each and every visit.  Bark us down, and book your reservation today.  Bone-appetit.</p>
+   </div>
+   <div class="col-md-3 col-lg-3">
+   </div>
+
+  </div>
+ </div>
+</div>
+  
 	</div>
-	<div id="footer">
-	<table width="100%">
-		<tr>
-			<td align="center"><address>123 Kingle Cane Court, Louisville, KY, 40291</address></td>
-		</tr>
-		<tr>
-			<td align="center"><address>502-364-2433</address></td>
-	</div>
+
+<div id="footer">
+ <table width="100%">
+  <tr>
+   <td align="center"><address>123 Kingle Cane Court, Louisville, KY, 40291</address></td>
+  </tr>
+<tr>
+ <td align="center"><address>502-364-2433</address></td>
+</div>
 </body>
 </html>
 
